--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost/zone?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.1.156/zone?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
@@ -11,7 +11,7 @@ spring:
       ddl-auto: update
       naming-strategy: org.hibernate.cfg.DefaultNamingStrategy
     generate-ddl: true
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
@@ -27,5 +27,12 @@ logging:
     org.springframework: error
     springfox.documentation: error
     java.sql: error
-
-
+  file: /var/logs/zone/zone.log
+service:
+  name: zone-service
+  version: v1
+  desc: provide country,province,city,district/country.
+  creator: jackie.han@cloudtopcn.com
+registry:
+  url: http://192.168.1.156/
+  port: 2379
