--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -6,14 +6,14 @@ ADD zone-service-0.0.1-SNAPSHOT.jar /data/app.jar
 
 RUN mkdir /var/logs/zone/ -p
 
-VOLUME /var/logs/
+VOLUME /var/logs/zone/
 
 EXPOSE 8080
 
-ENV host 127.0.0.1
+ENV HostIP 127.0.0.1
 
-ENV port 8080
+ENV ListenPort 8080
 
 WORKDIR /data/
 
-CMD ["java","-Xmx512m","-Duser.timezone=GMT+8","-jar","app.jar"]
+CMD ["java","-Xmx300m","-Duser.timezone=GMT+8","-jar","app.jar"]
